# GLFW-C

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
include/shaders/: triangle.vert
shaders/: triangle.frag
src/: glad.c  main.c  main.h
