cmake_minimum_required(VERSION 3.5)
project(glfw_c  LANGUAGES C VERSION 0.1.0)
cmake_policy(SET CMP0072 NEW)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)

add_executable(glfw_c src/main.c src/glad.c)
target_include_directories(glfw_c PUBLIC include/glad include/nuklear)
target_link_libraries(glfw_c -lrt -lm -ldl -lpthread ${LIBS})
target_link_libraries(glfw_c glfw GLEW OpenGL::GL)